Published errata list for Sedra/Smith 8th

--- a/errata/ERR.HTM
+++ b/errata/ERR.HTM
@@ -180,22 +180,23 @@
    MHID 0-07-284796-4, <br>
    ISBN 978-0-07-284796-3</A></p></td></tr><td>
    
-   <A HREF="Sedra_Smith/7th/S_S_7_ER.HTM"><img src=
-   "Sedra_Smith/7th/Sedra_Smith_7_Cover_120x150.jpg"
+   <A HREF="Sedra_Smith/8th/S_S_8_ER.HTM"><img src=
+   "Sedra_Smith/8th/Sedra_Smith_8th_Cover_120x150.jpg"
    width="120" height="150" border="0"></A></td><td><p>
-   <A HREF="Sedra_Smith/7th/S_S_7_ER.HTM"
+   <A HREF="Sedra_Smith/8th/S_S_8_ER.HTM"
 >Sedra &amp; Smith <br><I>
    Microelectronic Circuits</I><br> 
-   7th edition, Oxford, 2015.<br>
-   ISBN-10 0199339139, <br>
-   ISBN-13 978-0199339136</A><br><br>
+   8th edition, Oxford, 2020.<br>
+   ISBN-13 978-0-19-085346-4</A><br><br>
    <small><A 
    HREF="Sedra_Smith/5th/S_S_5_ER.HTM"
    >5th edition</A>, &nbsp;&nbsp;&nbsp;<A 
    HREF="Sedra_Smith/6th/S_S_6_ER.HTM"
    >6th edition</A>, &nbsp;&nbsp;&nbsp;<A 
    HREF="Sedra_Smith/7th/S_S_7_ER.HTM"
-   >7th edition</A></small></p></td></tr><tr><td>
+   >7th edition</A>,&nbsp;&nbsp;&nbsp;<A 
+   HREF="Sedra_Smith/8th/S_S_8_ER.HTM"
+   >8th edition</A></small></p></td></tr><tr><td>
    
    <A HREF="Valvano/V_2_ERR.HTM"><img src=
    "Valvano/VALVANO2.JPG"
