--- a/errata/Sedra_Smith/5th/S_S_5_ER.HTM
+++ b/errata/Sedra_Smith/5th/S_S_5_ER.HTM
@@ -22,12 +22,12 @@
           <i>Microelectronic Circuits</i>, 5th Ed. <br>
             ISBN 0-19-514251-9, Oxford, 2004.</b><br><br>
             
-                  <small>(<A HREF="../6th/S_S_6_ER.HTM"
-              >link</a> to errata for 6th edition)</small><br>
-                  <small>(<A HREF="../7th/S_S_7_ER.HTM"
-              >link</a> to errata for 7th edition)</small></p>
-              
-                                                    <p><small>
+  <small>Link to errata for the <A HREF="../6th/S_S_6_ER.HTM"
+              >6th</a> edition, <A HREF="../7th/S_S_7_ER.HTM"
+              >7th</a> edition, <A HREF="../8th/S_S_8_ER.HTM"
+              >8th</a> edition.  </small><br><br>
+                                                          <p><small>
+
 If you are considering purchasing this textbook and worrying that 
 it is a poor choice due to the length of this list of errata, please
 reconsider.  Competing textbooks have about as many errata, but perhaps
