--- a/errata/Sedra_Smith/6th/S_S_6_ER.HTM
+++ b/errata/Sedra_Smith/6th/S_S_6_ER.HTM
@@ -23,11 +23,13 @@
            </b>ISBN-10 &nbsp; <b> 0-19-532303-3</b><br>
                         ISBN-13 &nbsp; <b> 9780195323030<br>
                         Oxford, 2010.</b><br><br>
-                  <small>(<A HREF="../5th/S_S_5_ER.HTM"
-              >link</a> to errata for 5th edition)</small><br>
-                  <small>(<A HREF="../7th/S_S_7_ER.HTM"
-              >link</a> to errata for 7th edition)</small><br><br>
-                                                    <p><small>
+
+  <small>Link to errata for the <A HREF="../5th/S_S_5_ER.HTM"
+              >5th</a> edition, <A HREF="../7th/S_S_7_ER.HTM"
+              >7th</a> edition, <A HREF="../8th/S_S_8_ER.HTM"
+              >8th</a> edition.  </small><br><br>
+                                                          <p><small>
+
 If you are considering purchasing this textbook but are worried that 
 it is a poor choice due to the length of this list of errata, please
 don't worry about that.  Competing textbooks have about as many errata, 
