First edition of the EGR 322 public web page is ready

--- a/F20/322/322F20PS.HTM
+++ b/F20/322/322F20PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 7/17/2020 3:00 pm)
+                              >(Last update: 7/25/2020 7:42 pm)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -84,52 +84,49 @@ PS                                                           <BR>
    (In Sedra &amp; Smith unless otherwise noted<sup>1</sup>)       </DIV></B>
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
- 3
+ &nbsp;
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
-        9/07
+        &nbsp;
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        9/14                                       		     <br>
+        &nbsp;                                       		     <br>
 
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		<a href=
+		&nbsp;<!--<a href=
         "https://dordt.instructure.com/files/134540373/download?download_frd=1"
-        >9/17</a><br>
+        >9/17</a><br>-->
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Op-amp configurations (inverting, sum,<br>&nbsp;
 		etc.), differential and instrumentation amps.  <br>&nbsp;
 		Read Chapter 2 Sections 2.1 through 2.4        <br>&nbsp;
 													   <br>&nbsp;
-		<DO>Do +2.7, +2.19, +D2.34, +*2.43, +D2.51, 2.62,  <br>&nbsp;
-		+2.73, *2.77. </DO       <br>&nbsp;
+		<DO>Do 2.8, +D2.21, +D2.36, +*2.44, D2.52, 2.65,  <br>&nbsp;
+		+2.75, +*2.79. </DO       <br>&nbsp;
 		                                               <br>&nbsp;
         Note errata on <a href=
-        "../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#P121"
-                                            >+D2.34</a><br>&nbsp;
+        "../../errata/Sedra_Smith/8th/S_S_8_ER.HTM#P122"
+                      >+D2.36</a>                      <br>&nbsp;
         Also see the clarification of <a href=
-        "../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#P121_A"
-                            >+D2.34 part (b)</a>.      <br>&nbsp;
+        "../../errata/Sedra_Smith/8th/S_S_8_ER.HTM#P122_A"
+                                  >+D2.36 part (b)</a>.<br>&nbsp;
         Note clarification of problem <a href=
-        "../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#P127_A"
-                              >*2.77</a>               <br>&nbsp;
-		Note <a href=
-		"../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#P74"
-		>errata on page 74, Equation 2.9</a>
+        "../../errata/Sedra_Smith/8th/S_S_8_ER.HTM#P129_A"
+                                     >*2.79</a>
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
- 2
+ &nbsp;
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
-        8/31
+        Ex-<br>pect-<br>ed<br>9/01
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        9/07
+        &nbsp;
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		<a href=
+		&nbsp;<!--<a href=
         "https://dordt.instructure.com/files/134086786/download?download_frd=1"
-        >9/10</a><br>
+        >9/10</a><br>-->
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Frequency content of signals, amplifier<br>&nbsp; 
 		input resistance, output resistance, gain, dB, <br>&nbsp;
@@ -139,18 +136,13 @@ PS                                                           <BR>
         <DO>Do 1.28, 1.36, 1.38, +1.45, D*1.55, 1.67,     <BR>&nbsp;
         1.69, 1.74.</DO>                                    <br>&nbsp;
         Note clarification of problem <a href=
-        "../../errata/Sedra_Smith/7th/S_S_7_ER.HTM#P48_A"
-                              >+1.25</a>               <br>&nbsp;<small>
-		(On Wed. 9/05 the Ch. 2 problems that were on this </small><br>&nbsp;<small>
-		assignment were moved to the next assignment.)</i></small>
-                                                      
-
+        "../../errata/Sedra_Smith/8th/S_S_8_ER.HTM#P49_A">+1.28</a>
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  1
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
-        8/29
+        8/25
 		   <br>
 		   <br>
 		See<br>
@@ -158,12 +150,12 @@ PS                                                           <BR>
         below
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        8/31
+        8/27
 
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		<a href=
+		&nbsp;<!-- <a href=
         "https://dordt.instructure.com/files/133815349/download?download_frd=1"
-        ><!-- Ex-<br>pect-<br>ed<br>-->9/03</a><br>
+        >-->Ex-<br>pect-<br>ed<br>9/01<!--</a><br>-->
         <br>
         See<br>
         notes<br>
@@ -175,20 +167,23 @@ PS                                                           <BR>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Review of Circuit Analysis.            <br>&nbsp;
         Review as necessary from your EGR 220          <BR>&nbsp;
-        textbook and/or the "Introduction to Electrical<BR>&nbsp;
-        Engineering" handout on Canvas@Dordt             <A HREF=
-        "https://dordt.instructure.com/files/129457714/download?download_frd=1"
-                                ><font color="0099FF">here</font></A><sup>9</sup>, <BR>&nbsp;
-        and/or see Sedra & Smith <a href=
-        "http://global.oup.com/us/companion.websites/9780199339136/student/app/app_d"
-                           >Appendix D</a>.  Also      <br>&nbsp;
-		available on Canvas, <a href=
-		"https://dordt.instructure.com/files/129457791/download?download_frd=1"
+        textbook and/or the "<A HREF=
+        "https://dordt.instructure.com/files/175428978/download?download_frd=1"
+        ><font color="0099FF">Introduction to Electrical</font></a><br>&nbsp;
+		<A HREF=
+        "https://dordt.instructure.com/files/175428978/download?download_frd=1"
+        ><font color="0099FF">Engineering</font></a>" handout 
+		on Canvas@Dordt.<sup>9</sup>,<br>&nbsp; and/or see Sedra 
+		&amp; Smith <a href=
+        "https://oup-arc.com/protected/files/content/file/1579527191559-Sedra8e_AppD.pdf"
+                   >Appendix D</a>, also <br>&nbsp;
+        available on Canvas, <a href=
+		"https://dordt.instructure.com/files/175429504/download?download_frd=1"
 		><font color="0099FF">Appendix D</font></a><sup>9</sup>.<BR>&nbsp;
                                                        <BR>&nbsp;
-        <DO>Do Problems +1.5, 1.6, +D*1.9, D1.13, 1.15, <BR>&nbsp;
-        1.18, 1.21, +1.25. (See notes below.)</DO>    <BR>&nbsp;
-        Bring homework questions to class on Friday.  
+        <DO>Do Problems +1.5, 1.6, +D*1.9, D1.13,      <BR>&nbsp;
+        1.15, 1.18, 1.21, +1.25.</DO> (See notes below.)    <BR>&nbsp;
+        Bring homework questions to class on Th., 8/27.  
 <!-- - - - - - - - - -BOTTOM-OF TABLE- - - - - - -  --></TD></TR>
 </TABLE>
 <BR>
@@ -200,6 +195,7 @@ PS                                                           <BR>
 Note 1)
                                                         </TD><TD>
 The text includes four kinds of problem solving.<br>
+Generally only the last kind, "<i>Problems</i>" are assigned.<br>
 a.) <i><u>Video Examples</u></i> are embedded throughout the reading 
 assignments.  These have complete solutions presented via video 
 accessed by Web.  Some of the homework may parallel these video 
@@ -219,9 +215,9 @@ solutions.  Students should challenge themselves to solve some
 of these exercises.  A few of these may be assigned as homework.  
 If so, on this page their number will be prefixed with "Ex".  
 The first exercise, Ex1.1, starts near the bottom of page 8.<br>
-d.)  <i><u>Problems</u></i> are found at the end of each chapter.  
+d.)  <b><i><u>Problems</u></i> are found at the end of each chapter.  
 All the assignments refer to "Problems" at the end of the 
-chapter unless they are prefixed with "Ex".  Example:  The 
+chapter unless they are prefixed with "Ex".</b>  Example:  The 
 first problem assigned in this class, 1.5, is found on page 46. 
 (Ex1.5 is found on page 12 and Ex1.5 is not the assigned problem).  
                          <BR><BR><TR><TD width="60" valign="top">
@@ -241,7 +237,7 @@ answer is provided in an online appendix to the textbook.  The
 "+" marks do not appear in the textbook.  Solutions are in 
 <a href="https://oup-arc.com/protected/files/content/file/1579527329609-Sedra8e_AppL.pdf"
 >Appendix L</a>.  Also available on Canvas, <a href=
-"https://dordt.instructure.com/files/129457884/download?download_frd=1"
+"https://dordt.instructure.com/files/175429467/download?download_frd=1"
 ><font color="0099FF">Appendix L</font></a><sup>9</sup>.
 
                          <BR><BR><TR><TD width="60" valign="top">
@@ -279,7 +275,7 @@ Note 8)
 If you are having difficulty reading the latest version of this 
 page it may have to do with your browser's cached memory. Read 
 this <a 
-href="../../ddb/NOTES18.HTM">note on 
+href="../../ddb/NOTES20.HTM">note on 
 cached pages</a> to solve the problem. 
 
                          <BR><BR><TR><TD width="60" valign="top">
