--- a/F20/322F20.HTM
+++ b/F20/322F20.HTM
@@ -75,14 +75,14 @@ border="0"></A><br>
                    <table align="center", width="420"><tr><td><br>
 
                   <P style="text-align: center;"><A target="_top" 
-   HREF="322/322F18PS.HTM"
+   HREF="322/322F20PS.HTM"
                      >Homework Assignments</A>           <br><br>
        All course work must conform to these <A target="_top" 
-	      HREF="HWSTDF18.HTM"
+	      HREF="../integrity.htm"
                                       >standards</A>.    <BR></P> 
 
             <P style="text-align: center;"><A target="_top" HREF= 
-	    "322/EGR322_01Syllabus2018F_De_Boer_322F18SY_Electronics_I.PDF"
+	    "322/EGR322_01Syllabus2020F_De_Boer_322F20SY_Electronics_I.PDF"
                      >Course Syllabus</A>                    <br>
         Includes course catalog description,                 <br> 
           textbook information, grade weights, etc.          </P> 
