Fixed broken links in EGR 322 public portal

--- a/F20/322F20.HTM
+++ b/F20/322F20.HTM
@@ -82,13 +82,13 @@ border="0"></A><br>
                                       >standards</A>.    <BR></P> 
 
             <P style="text-align: center;"><A target="_top" HREF= 
-	    "322/EGR322_01Syllabus2020F_De_Boer_322F20SY_Electronics_I.PDF"
+	    "322/EGR322_01Syllabus2020F_De_Boer_322F20SY_Electronics_I.pdf"
                      >Course Syllabus</A>                    <br>
         Includes course catalog description,                 <br> 
           textbook information, grade weights, etc.          </P> 
 
                                <P style="text-align: center;"><A target="_top" 
-                    HREF="../errata/Sedra_Smith/7th/S_S_7_ER.HTM"
+                    HREF="../errata/Sedra_Smith/8th/S_S_8_ER.HTM"
                      >Textbook Errata</A>                    </P> 
 
          <P style="text-align: center;"><A target="_top" HREF = "https://dfdeboer.github.io/index.html"
@@ -106,22 +106,22 @@ Canvas@Dordt on the World Wide Web via the <a href=
                                     <P style="text-align: center;"><BR><small>
 The main portal to this course for students is via 
                                                  <A target="_top" 
-           HREF="https://dordt.instructure.com/courses/2329138"
+           HREF="https://dordt.instructure.com/courses/2899971"
                                            >Canvas@Dordt</A><BR>
 The Canvas@Dordt portal provides everything in this frame and more.
 <!-- You may <a
    href="http://homepages.dordt.edu/~ddeboer/cd_common/GUEST.HTM"
             >request guest access</a> to Canvas@Dordt) --><br><br>
-<a href="../F16/322F16.HTM">
+<a href="../F18/322F18.HTM">
 <img src="../PREVIOUS.GIF" ALT="PREVIOUS" border="0"></a>
 offering of this course <!--  
 <a href="../F18/220F18.HTM"> 
-<img src="../NEXT.GIF" ALT="MEXT" border="0"> --><br>
+<img src="../NEXT.GIF" ALT="NEXT" border="0"> --><br>
 <a href="../S17/323S17.HTM">
 <img src="../PREVIOUS.GIF" ALT="PREVIOUS" border="0"></a>
-offering of EGR 323 
+offering of EGR 323 <!-- 
 <a href="../S19/323S19.HTM"> 
-<img src="../NEXT.GIF" ALT="NEXT" border="0">
+<img src="../NEXT.GIF" ALT="NEXT" border="0">-->
                                                      </small></P> 
 
 </td></tr></table>
