Published EGR 362 to public web portal, a few fixes to EGR 322 F18, F19, 322syllabus

--- a/F18/322F18.HTM
+++ b/F18/322F18.HTM
@@ -114,9 +114,9 @@ The Canvas@Dordt portal provides everything in this frame and more.
             >request guest access</a> to Canvas@Dordt) --><br><br>
 <a href="../F16/322F16.HTM">
 <img src="../PREVIOUS.GIF" ALT="PREVIOUS" border="0"></a>
-offering of this course <!--  
-<a href="../F18/220F18.HTM"> 
-<img src="../NEXT.GIF" ALT="MEXT" border="0"> --><br>
+offering of this course  
+<a href="../F20/322F20.HTM"> 
+<img src="../NEXT.GIF" ALT="MEXT" border="0"><br>
 <a href="../S17/323S17.HTM">
 <img src="../PREVIOUS.GIF" ALT="PREVIOUS" border="0"></a>
 offering of EGR 323 
