--- a/F20/322F20.HTM
+++ b/F20/322F20.HTM
@@ -58,7 +58,9 @@ alt="'click'-->to De Boer's homepage" hspace="0"
 src="322/DeBoer_2016_135x165.jpg" 
 border="0"></A><br>
 <A target="_top" HREF="../index.html">
-<b>Prof. De Boer</b></a></td>
+<b>Prof. De Boer</b></a><br>
+Office Phone: 712-722-6245<br>
+<a href="mailto:Douglas.DeBoer@Dordt.edu">Douglas.DeBoer@Dordt.edu</a></td>
 
 <td style="text-align: center;" valign="bottom" width=140>
 <A target="_top" HREF=
