--- a/F20/363F20.HTM
+++ b/F20/363F20.HTM
@@ -18,7 +18,7 @@ target="_top">
 
             Dordt University Engineering Department</A><BR><BR>
         INTRODUCTION TO COMMUNICATION SYSTEMS, EGR 363<br>
-                          (Fall 2019)</B></P>
+                          (Fall 2020)</B></P>
 </td></tr></table>
 <table align="center" width="480" border="0"><tr>
 
@@ -28,7 +28,7 @@ target="_top">
       target="_top">
       <img width="101" height="141"
            alt="'click'--> to publisher's page" hspace="0" 
-           src="../F17/363/Proakis_cover_9780133354850.jpg"
+           src="363/Proakis_Salehi_Cover_116x163_tumbnail.jpg"
            border="0"></A><br>
    <A HREF="https://www.pearson.com/us/higher-education/program/Proakis-Fundamentals-of-Communication-Systems-2nd-Edition/PGM320787.html" 
       target="_top"><b>
@@ -42,7 +42,7 @@ target="_top">
       target="_top">
       <img width="135" height="165" 
            alt="'click'-->to De Boer's homepage" hspace="0" 
-           src="../F17/363/DeBoer_2016_135x165.jpg" 
+           src="363/DeBoer_2016_135x165.jpg" 
            border="0"></A><br>
    <A HREF="../index.html"
       target="_top">
@@ -58,7 +58,7 @@ target="_top">
       target="_top">
       <img width="60" height="60"
       alt="'click'-->to GNU Octave homepage" hspace="0" 
-           src="../F17/363/GNU_Octave_logo.png" 
+           src="363/GNU_Octave_logo.png" 
            border="0"></A><br>
    <a href="https://www.gnu.org/software/octave/download.html"
       target="_top">
@@ -71,7 +71,7 @@ target="_top">
       target="_top">
       <img width="120" height="90" 
            alt="'click'-->to Matlab homepage" hspace="0" 
-           src="../F17/363/ml_logo.gif" 
+           src="363/ml_logo.gif" 
            border="0"></A><br>
    <A HREF="http://www.mathworks.com/products/matlab.html"
       target="_top">
@@ -84,7 +84,7 @@ target="_top">
 <table align= "center" width="420">
   <tr>
      <td><br>
-<P style="text-align: center;"><A HREF="../F19/363/363F19PS.HTM" target="_top"
+<P style="text-align: center;"><A HREF="363/363F20PS.HTM" target="_top"
       >Homework Assignments</A><BR><br>
       All course work must conform to these <A 
           HREF="../integrity.htm" 
@@ -92,7 +92,7 @@ target="_top">
           >standards</A>.<BR>
 </P> 
 
-<P style="text-align: center;"><A HREF= "../F19/363/EGR363-01Syllabus2019F_De_Boer_363F19SY_Intro_to_Communication Systems.pdf" target="_top"
+<P style="text-align: center;"><A HREF= "363/EGR363-01Syllabus2020F_De_Boer_363F20SY_Intro_to_Communication Systems.pdf" target="_top"
                      >Course Syllabus</A><BR>
   Includes course description, textbook, grade weights, etc.<br>
        <!--(Course Syllabus will be available starting<br>
@@ -117,15 +117,15 @@ Canvas@Dordt on the <br>World Wide Web via the <a href=
 
 <!-- FINE PRINT -->        <P align="center"><small>
 The main portal to this course for students is via <A 
-HREF="https://dordt.instructure.com/courses/2189733"
+HREF="https://dordt.instructure.com/courses/2899998"
       Target="_top">Canvas@dordt</A><BR>
 The Canvas@dordt portal provides everything on this page and more.<br>
 
-<a href="../F17/363F17.HTM">
+<a href="../F19/363F19.HTM">
 <img src="../PREVIOUS.GIF" ALT="PREVIOUS" border="0"></a>
-offering of this course  
-<a href="../F20/363F20.HTM"> 
-<img src="../NEXT.GIF" ALT="NEXT" border="0"></a> 
+offering of this course <!-- 
+<a href="../S18/363S18.HTM"> 
+<img src="../NEXT.GIF" ALT="MEXT" border="0"></a> --> 
 <BR>
 </small></P> 
 
