Fixed a link that the previoius commit broke.

--- a/F20/363F20.HTM
+++ b/F20/363F20.HTM
@@ -92,7 +92,7 @@ target="_top">
           >standards</A>.<BR>
 </P> 
 
-<P style="text-align: center;"><A HREF= "363/EGR363-01Syllabus2020F_De_Boer_363F20SY_Intro_to_Communication Systems.pdf" target="_top"
+<P style="text-align: center;"><A HREF= "363/EGR363-01Syllabus2020F_De_Boer_363F20SY_Intro_to_Communication_Systems.pdf" target="_top"
                      >Course Syllabus</A><BR>
   Includes course description, textbook, grade weights, etc.<br>
        <!--(Course Syllabus will be available starting<br>
