Added screenshots indexes for EGR 363 and various other minor edits

--- a/GDS.HTM
+++ b/GDS.HTM
@@ -40,8 +40,8 @@ modified and used by permission <a href=
 
 <b>THE MAIN THING: Grades predict academic ability</b><br>
 Grades are like road signs telling you what to expect ahead if 
-you keep going as you are.  After graduation, will you be able 
-to get the job done?  Will you succeed at graduate school if 
+you keep going as you are.  After graduation, will you understand
+how to get the job done?  Will you succeed at graduate school if 
 that is your goal? Inflating grades to make it easier to get 
 scholarships and other benefits will not assure that you can 
 do what needs to be done.  <br><br>
@@ -218,7 +218,7 @@ The grades on the problem sets are, <br><br>
 
 The total points earned are <br><br>
 
-12 + 11 + 10 +  7 + 11 + 12 + 17 + 13 + 7 = 101<br><br>
+12 + 11 + 10 +  7 + 11 + 12 + 17 + 13 + 7 = 100<br><br>
                 
 The total points possible are <br><br>
 
@@ -318,7 +318,7 @@ into it.  That spreadsheet computes the course grades.  Then Prof.
 De&nbsp;Boer manually enters the "CourseGrade" into the grade book 
 at Canvas and submits the grade to the registrar.  <br><br>
 
-<small><i>This page was last updated on 8/28/2018.</i></small>
+<small><i>This page was last updated on 8/15/2020.</i></small>
 
 <!--"Course total" is the (useless) item that courses@dordt 
 calculates willy-nilly and that you should ignore.  "CourseGrade" 
