--- a/F20/322/322F18DN_edited_for_F20.HTM
+++ b/F20/322/322F18DN_edited_for_F20.HTM
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 <link rel="shortcut icon" href="../../favicon.ico">
-<title>EGR 322, Daily Notes</title>
+<title>EGR 322, F18 Daily Notes</title>
 <style type="text/css"><!--
 TABLE {
    font-family: "verdana";
@@ -66,7 +66,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 
          >DORDT COLLEGE ENGINEERING DEPARTMENT        </A><BR><B>
                EGR 322 &mdash; ELECTRONICS I                 <BR>
-                           Fall 2018                     </B></P>
+   Fall <span style="color: red; font-size: 20">2018</span></B></P>
 
                    <P style="text-align:center; margin-top: 10px; 
                                        margin-bottom: 0px;"><U><B
