Updated list of courses taught

--- a/ddb_courses.html
+++ b/ddb_courses.html
@@ -55,7 +55,9 @@
 		Professor De Boer started using web pages for course management in S02.  
 		<br> If a date prior to S02 is shown but it is not a link it means the 
 		course was instructed by Professor De Boer during that semester but 
-		there is nothing related available online.
+		there is nothing related available online.<br>
+		In the Dordt College Catalog for 2000&ndash;2001 several courses were renumbered.  
+		Parenthetic remarks<br>  below such as,"same courses as. . ." reflect this renumbering.<br>
 		<br>If you cannot find what you are looking for here, you are encouraged 
         to e-mail professor De Boer to ask about it, but there is no assurance 
 		the information for older courses has been archived. <br><br>
@@ -167,6 +169,7 @@
 		F90, F89, F88, F86<br><br>
 		
 		EGR 322, Electronics I (with a lab&mdash;same course as EGR 206)<br>
+		<a href="F20/322F20.HTM">F20</a>, 
 		<a href="F18/322F18.HTM">F18</a>, 
 		<a href="F16/322F16.HTM">F16</a>, 
 		<a href="F14/322F14.HTM">F14</a>, 
@@ -202,6 +205,7 @@
 		S01, F97, F95, F94, S91<br><br>
 		
 		EGR 363, Introduction to Communication Systems<br>
+		<a href="F20/363F20.HTM">F20</a>,
 		<a href="F19/363F19.HTM">F19</a>,
 		<a href="F17/363F17.HTM">F17</a>,
 		<a href="S16/363S16.HTM">S16</a>,
@@ -282,7 +286,7 @@
         <HR><p>
         <A HREF = "index.html">Back to De Boer's home page</A><BR><BR>
 
-         <small>(This page last updated on 8/22/2019)</small></P>
+         <small>(This page last updated on 8/21/2020)</small></P>
     </TD>
 </TR>
 
