Updated my homepage, index.htm

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <TR VALIGN="BOTTOM">
   <TD>
         <P>
-        Office:  SB1638 (moved from SB2608)<BR> 
+        Office:  SB1638<BR> 
         Office Phone:  712-722-6245 <BR>
         <IMG SRC="INDEX/DDB_email_addr.gif"><ALT="Douglas(dot)DeBoer(at)dordt(dot)edu"><BR>
         More about Prof. De Boer, his <a href="CV.HTM">CV</a>.<br>
@@ -99,14 +99,15 @@ Contents of this page: &nbsp; &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
 <HR>
 <br>
 <a name="Office_Hours"></a>
-<H1>Office Hours, Spring 2020</H1>
+<H1>Office Hours, Fall 2020</H1>
 <blockquote>
-     1:00 PM &ndash; 1:50 PM Wednesdays, or by appointment <br>(recommended--set up an appointment by phone or e-mail.)<br><br>
+     9>25 AM &ndash; 10:50 AM Tuesdays and Thursdays, or by appointment <br>(recommended--set up an appointment by phone or e-mail.)<br><br>
 	 
      Meet me in person or via phone.<br>
      Call me!  x6245 or 712-722-6245  No appointment to call is needed.<br>
-	 <small>&nbsp;&nbsp;&nbsp;(I like the telephone. Call 
-        all you want.  It is very convenient for both of us.)</small><br><br>
+	 <small>&nbsp;&nbsp;&nbsp;(Phone calls are recommended&mdash;very <a href=
+	 "https://play.google.com/store/apps/details?id=com.treds.deboerator&hl=en_US&showAllReviews=true"
+	 >convenient</a> for everyone.)</small><br><br>
         
      Before traveling (or walking) to visit me at my office, it is wise to 
 	 call on the telephone and see if I'm in.  If I do not answer my office 
@@ -127,7 +128,7 @@ Contents of this page: &nbsp; &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
      or elsewhere and want to talk, just <i>pick up your phone and 
      call</i>. <BR><br> 
 
-     Here is Prof. De Boer's general <b><A HREF="S20/SCH_S20.pdf" 
+     Here is Prof. De Boer's general <b><A HREF="F20/SCH_F20.pdf" 
      >Weekly Schedule</A></b>.<br>
 	 Professor De Boer is now working for Dordt University on a half-time basis.
 	 </blockquote><br>
@@ -140,14 +141,20 @@ Contents of this page: &nbsp; &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
 <a name="Courses"></a><br>
 <H1>Courses</H1>
 
-<p>In the Spring of 2020 I am teaching one course: </p>
+<p>In the Spring of 2020 I am teaching two courses: </p>
 
 <Blockquote><font face="verdana" size="2">
-<!--EGR 304-->
-     <A HREF="https://dordt.instructure.com/courses/2662877">
+<!--EGR 322 with lab-->
+     <A HREF="https://dordt.instructure.com/courses/2899971">
      <font color="#0099FF">C</font></A>
-     <a href="S20/304S20.HTM"
-     >EGR 304&nbsp; Embedded Microprocessor Systems (with a lab)</b></a><br>
+     <a href="F20/322F20.HTM"
+     >EGR 304&nbsp; Electronics I (with a lab)</b></a><br>
+
+<!--EGR 363-->
+     <A HREF="https://dordt.instructure.com/courses/2899998">
+     <font color="#0099FF">C</font></A>
+     <a href="F20/363F20.HTM"
+     >EGR 304&nbsp; Introduction to Communication Systmes</b></a><br>
 
      <Blockquote><small>
      Note 1: Professor De Boer welcomes 
@@ -187,7 +194,7 @@ Contents of this page: &nbsp; &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
      ><b><font color="#CC9900">*</font></b></A><br>
 
      EGR 304&nbsp; Embedded Microcontroller Systems (with a lab)
-     <A HREF="S17/304S17.HTM" style="text-decoration: none"
+     <A HREF="S20/304S20.HTM" style="text-decoration: none"
      ><b><font color="#CC9900">*</font></b></A><br>
 
      EGR 322&nbsp; Electronics I (with a lab)
