Updated integrity statement and corrected test #1 date for EGR 363 syllabus

--- a/integrity.htm
+++ b/integrity.htm
@@ -18,12 +18,18 @@ TABLE {font-family:"verdana"; font-size:10pt;} -->
 <P Align="center"><B>
                    STANDARDS of SCHOLARSHIP</b><br>
             For Professor De Boer's Classes</b><br>
- <small><font color="grey">(Last updated on 6/02/2020)</font></small></p>
+ <small><font color="grey">(Last updated on 8/21/2020)</font></small></p><p>
+ 
+ ". . .whatever you do, whether in word or deed, do it all in 
+the name of the Lord Jesus..." (from Colossians 3)</p><p> 
 
 <P><B>Homework is for Learning by Showing How<br>
 </B><a name="Show_How"></a>
-The overall goal of doing homework is to learn by showing how 
-to solve problems.  On written homework you need to present a 
+
+The overall goal of doing homework is to build a relationship 
+of understanding between you and God's world.  When you can 
+show others how solve a problem, then you have really learned, 
+not mearely earned a grade.  On written homework you need to present a 
 clear sequence of rational statements to show how a problem 
 is solved, not simply a correct answer.  </p><p> 
 
@@ -383,11 +389,14 @@ the last sentence:
 </blockquote>
 
 <b>Help is Available</b><a name="Help"></a><br>
-For occasional help, you may call or visit Professor De Boer at 
-his office (722-6245) during the daytimes.  You may also call him 
-at home Monday through Saturday before 10 PM 
-(<img 
-src="cd_common/HWSTD/home_ph.gif">).  
+Learning necessarily involves building relationships between yourself
+and the universe around you and between yourself and the people around you. 
+Good students ask for help when help is needed.  Good professors want 
+to help you.  For occasional help, you may call or visit Professor De Boer at 
+his office (722-6245) during the daytimes.  Because he is working only 
+half time, He is often not in the office.  If there is no answer at the 
+office you may then immediately call him at home Monday through 
+Saturday before 10 PM (<img src="cd_common/HWSTD/home_ph.gif">).  
 </p><p> 
 
 If you need (or want) help more frequently, consult the secretary 
