--- a/CV.HTM
+++ b/CV.HTM
@@ -275,7 +275,7 @@
         Communication Systems, Modulation Theory, <BR>
         Digital Signal Processing, <BR>
         Digital Systems, Embedded Controllers <BR>
-		Smart-Grid and Reliability, <a href= "http://fnetpublic.utk.edu/">FNET/GridEye</a> Project (FDM Host)<BR></DIV>
+		Smart-Grid and Reliability, <a href= "http://fnetpublic.utk.edu/">FNET/GridEye</a> Project (FDM Host)<BR></DIV><br>
     </TD>
 </TR>
 
@@ -619,7 +619,11 @@
 		direction that will enable my Kingdom service well into 
 		my elder years while I also devote a proportion of my 
 		time to Dordt University in my continuing role as a Professor.  
-		Exactly what this means I do not know yet, but I trust 
+		One of the retirement activities I'm exploring is the IEEE's
+		"Science Kits for Public Libraries" project.  I serve as 
+		the Grant Applications Chairperson for this project, a 
+		volunteer role.  Exactly what else I might do when I am 
+		fully retired I do not know yet, but I trust 
 		the Holy Spirit will lead me.  
 
         <P>In my role as a professor it is my desire to lead my 
@@ -793,7 +797,7 @@
         <HR>
         <A HREF = "INDEX.HTM">Back to De Boer's home page</A><BR><BR>
 
-         <small>(This page last updated on 1/17/2020)</small></DIV>
+         <small>(This page last updated on 8/22/2020)</small></DIV>
     </TD>
 </TR>
 
