added link to skpl in cv

--- a/CV.HTM
+++ b/CV.HTM
@@ -620,11 +620,11 @@
 		my elder years while I also devote a proportion of my 
 		time to Dordt University in my continuing role as a Professor.  
 		One of the retirement activities I'm exploring is the IEEE's
-		"Science Kits for Public Libraries" project.  I serve as 
-		the Grant Applications Chairperson for this project, a 
-		volunteer role.  Exactly what else I might do when I am 
-		fully retired I do not know yet, but I trust 
-		the Holy Spirit will lead me.  
+		"<a href="https://r4.ieee.org/skpl/">Science Kits for Public 
+		Libraries" project</a>."  I serve as the Grant Applications 
+		Chairperson for this project, a volunteer role.  Exactly what 
+		else I might do when I am fully retired I do not know yet, 
+		but I trust the Holy Spirit will lead me.  
 
         <P>In my role as a professor it is my desire to lead my 
 		students to be first-rate engineers in 
