--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ Contents of this page: &nbsp; &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
 <a name="Office_Hours"></a>
 <H1>Office Hours, Fall 2020</H1>
 <blockquote>
-     9:25 AM &ndash; 10:50 AM Tuesdays and Thursdays, or by appointment <br>(recommended--set up an appointment by phone or e-mail.)<br><br>
+     9>25 AM &ndash; 10:50 AM Tuesdays and Thursdays, or by appointment <br>(recommended--set up an appointment by phone or e-mail.)<br><br>
 	 
      Meet me in person or via phone.<br>
      Call me!  x6245 or 712-722-6245  No appointment to call is needed.<br>
@@ -141,20 +141,20 @@ Contents of this page: &nbsp; &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
 <a name="Courses"></a><br>
 <H1>Courses</H1>
 
-<p>In the Fall of 2020 I am teaching two courses: </p>
+<p>In the Spring of 2020 I am teaching two courses: </p>
 
 <Blockquote><font face="verdana" size="2">
 <!--EGR 322 with lab-->
      <A HREF="https://dordt.instructure.com/courses/2899971">
      <font color="#0099FF">C</font></A>
      <a href="F20/322F20.HTM"
-     >EGR 322&nbsp; Electronics I (with a lab)</b></a><br>
+     >EGR 304&nbsp; Electronics I (with a lab)</b></a><br>
 
 <!--EGR 363-->
      <A HREF="https://dordt.instructure.com/courses/2899998">
      <font color="#0099FF">C</font></A>
      <a href="F20/363F20.HTM"
-     >EGR 363&nbsp; Introduction to Communication Systmes</b></a><br>
+     >EGR 304&nbsp; Introduction to Communication Systmes</b></a><br>
 
      <Blockquote><small>
      Note 1: Professor De Boer welcomes 
@@ -450,7 +450,7 @@ An archive of the blog site was saved but the site was not put back up. No plan 
 
 <br><br><br>
 <HR width = 20% align = "left">
-<small>This page last edited on 8/22/2020.</small><BR><br><br>&nbsp;
+<small>This page last edited on 8/21/2020.</small><BR><br><br>&nbsp;
  
 
 </DIV></TD></TR></TABLE>
