Published slides for today, also updated final exam info for EGR 363

--- a/F20/363/363F20DN.HTM
+++ b/F20/363/363F20DN.HTM
@@ -72,7 +72,8 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
                                        margin-bottom: 0px;"><U><B
                          >SCREENSHOTS             </B></U><br><br>
                        
-       Click on a date to download the notes for that day.<br><small>
+       Click on a date to download the notes for that day.<br>
+	   Click the <small>"VIDEO"</small> link to stream the video for that day.<small><br>
 	   U = Tuesday, R = Thursday                 </small>
        </P>
        <br><p>
@@ -89,13 +90,13 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width="500" align="center" valign="bottom"><b><small>TOPICS</small></b></td> 
    </TR><!-- Week of 8/23 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  8/25<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/180440575/download?download_frd=1"><!-- -->
+	  8/25<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       8/27<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Tuesday    -->&nbsp;<!--start comment--><font color=grey>First Day of Class</font><!--end comment--><br>
+      <!--Tuesday    -->&nbsp;<!--start comment--><small>VIDEO</small> Intro., schlrshp, Web pages, What is info, Signals, Systems, Matlab<!--end comment--><br>
       <!--Thursday   -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 8/30 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
