--- a/F20/363/363F20DN.HTM
+++ b/F20/363/363F20DN.HTM
@@ -96,7 +96,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       8/27<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Tuesday    -->&nbsp;<!--start comment--><small>VIDEO</small> Intro., schlrshp, Web pages, What is info, Signals, Systems, Matlab<!--end comment--><br>
+      <!--Tuesday    -->&nbsp;<!--start comment--><small><a href="https://www.youtube.com/watch?v=OIVENgNVj8k">VIDEO</a></small> Intro., schlrshp, Web pages, What is info, Signals, Systems, Matlab<!--end comment--><br>
       <!--Thursday   -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 8/30 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
