Added turn-in link for EGR 322 PS#1

--- a/F20/322/322F20PS.HTM
+++ b/F20/322/322F20PS.HTM
@@ -150,7 +150,9 @@ PS                                                           <BR>
         below
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        8/27
+        <a href=
+		"https://dordt.instructure.com/courses/2899971/assignments/28463751"
+		>8/27</a>
 
    <!-- Returned -->        </TD><TD align="center" valign="top">
 		&nbsp;<!-- <a href=
@@ -161,7 +163,7 @@ PS                                                           <BR>
         notes<br>
         3 <br>
 		thru<br>
-		9<br>
+		10<br>
         below
 
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
@@ -183,7 +185,11 @@ PS                                                           <BR>
                                                        <BR>&nbsp;
         <DO>Do Problems +1.5, 1.6, +D*1.9, D1.13,      <BR>&nbsp;
         1.15, 1.18, 1.21, +1.25.</DO> (See notes below.)    <BR>&nbsp;
-        Bring homework questions to class on Th., 8/27.  
+        Bring homework questions to class on Th., 8/27. <br>&nbsp;
+		                                                <br>&nbsp;
+		Click the due date (link) to turn your work in  <br>&nbsp;
+		electronically.  (Applies to all future         <br>&nbsp;
+		assignments as well.  See note 10 below.)  
 <!-- - - - - - - - - -BOTTOM-OF TABLE- - - - - - -  --></TD></TR>
 </TABLE>
 <BR>
@@ -287,7 +293,18 @@ page of Canvas@dordt instead of the resource you wanted, click
 your browser's back arrow as many times as needed to return to 
 the link on this page, then click the link again.  Now that you 
 are signed in the link will work properly.                                   
-
+                         <BR><BR><TR><TD width="60" valign="top">
+Note 10) 
+                                                        </TD><TD>
+We will turn homework in electronically this semester.  Click 
+a due date (the due dates are links) to get instructions from 
+canvas for turning your work in.  The recommended format is a 
+single pdf file from a scanner.  Another alternative is a a 
+word-processor file (docx for example) with photos from a 
+smartphone of your homework pasted into the document.  If you 
+use this alternative, please consider using a "mobile scanner 
+app" in your smartphone to get a nice contrasty picture of 
+each homework page.
                                    <br><br><br><br></P></TD></TR>
 </TABLE>
 </BODY>
