Published errata in Sedra Smith 8th for problems 1.6, 1.25

--- a/F20/322/322F20PS.HTM
+++ b/F20/322/322F20PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 8/26/2020 11:07 am)
+                              >(Last update: 8/26/2020 8:00 pm)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -186,6 +186,11 @@ PS                                                           <BR>
         <DO>Do Problems +1.5, 1.6, +D*1.9, D1.13,      <BR>&nbsp;
         1.15, 1.18, 1.21, +1.25.</DO> (See notes below.)    <BR>&nbsp;
         Bring homework questions to class on Th., 8/27. <br>&nbsp;
+		                                                <br>&nbsp;
+        Note errata for Problems <a href=
+        "../../errata/Sedra_Smith/8th/S_S_8_ER.HTM#P46A">1.6</a>
+		and <a href=
+		"../../errata/Sedra_Smith/8th/S_S_8_ER.HTM#P49">1.25</a><br>&nbsp;
 		                                                <br>&nbsp;
 		Click the due date (link) to turn your work in  <br>&nbsp;
 		electronically.  (Applies to all future         <br>&nbsp;
