--- a/errata/Sedra_Smith/8th/S_S_8_ER.HTM
+++ b/errata/Sedra_Smith/8th/S_S_8_ER.HTM
@@ -14,7 +14,7 @@
 <P align="center"><A HREF="../../../index.html">
                    Professor De Boer</A>'s list of<br><a href="../../../ERRATA/err.htm"> 
                        TEXTBOOK ERRATA</a><br>
-                    (last update 7/23/2020)<br> 
+                    (last update 8/26/2020)<br> 
                                <br>
     <img src="Sedra_Smith_8th_Cover_120x150.jpg" width="120" height="150"
                    alt="Textbook cover thumbnail"><br>
@@ -51,6 +51,18 @@ on errata unique to various version and printings there are
 appropriate annotations.</p></small>
 
 <P>
+                                            <A NAME="P46A"></A><b>
+Page 46, Problem 1.6</b><br>
+   In the problem statement, replace the first instance of 
+   <i>V</i><sub>o</sub>    with <i>V<sub>X</sub></i>.  Then in 
+   Figure P1.6 part (a), delete the <i>V<sub>o</sub></i> label.  
+   (Or replace it with    <i>V<sub>X</sub></i>.)<br><small>
+      As printed, the label <i>V<sub>o</sub></i> is used for two 
+	  different voltages.  The changes avoid this confusion.</small><br>
+
+   &nbsp; &nbsp; &nbsp; &nbsp; <small><i>(Posted 8/26/2020)
+                                             </i></small><br><br>
+   
                                           <A NAME="P46"></A><b>
 Page 46,  Problem 1.7</b><br>
    Replace the problem statement with this:            <br><br>
@@ -96,6 +108,13 @@ Page 46,  Problem 1.7</b><br>
 		  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
    &nbsp; &nbsp; &nbsp; &nbsp; <small><i>(Posted 7/23/2020)
    
+                                             </i></small><br><br>
+   
+                                            <A NAME="P49"></A><b>
+Page 49, e-book edition only,  Answer to Problem 1.25 part (b)</b><br>
+   There is a mistake in the answer given in the e-book edition.<br> 
+   In part (b) change "50 A" to "50 &mu;A."<br>
+   &nbsp; &nbsp; &nbsp; &nbsp; <small><i>(Posted 8/26/2020)
                                              </i></small><br><br>
    
                                             <A NAME="P122"></A><b>
